--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,74 @@
+*{
+	margin:0px;
+	padding:0px;
+	box-sizing:border-box;
+}
 
+nav{
+	position:relative;
+	float:left;
+	width:100%;
+	height:80px;
+	background-color:grey;
+	padding-left:60px;
+	padding-right:60px;
+
+}
+
+.icon-nav{
+	height:80px;
+	position:absolute;
+	border-radius: 50%;
+	left:100px;
+}
+
+ul{
+	list-style-type: none;
+	margin-left:200px;
+}
+
+ul li{
+	display:inline;
+	padding:10px;
+}
+
+ul li a{
+	text-decoration:none;/*TODO: why the underline not coming in anchor tag, is there any css already written for it*/
+	border-right:2px solid black;
+	padding-right:5px;
+}
+
+body {
+	background: url(../images/outerspace_landscape.jpeg) no-repeat;
+	background-size: cover;
+}
+
+main{
+	position:relative;
+}
+
+.container{
+	position: absolute;
+	width: 600px;
+	height: 300px;
+	border: 10px dotted green;
+	left: 300px;
+	top: 200px;
+}
+
+.container-pic{
+	width:200px;
+	height:200px;
+}
+
+.cat{
+	position: absolute;
+	bottom:70%;
+	right:80%;
+}
+
+.dog{
+	position:absolute;
+	left:80%;
+	top:70%;
+}
